[package]
name = "tg-reddit-videogetter"
version = "0.1.0"
authors = ["Leonid Elchanin <wakecold@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
futures = "*"
tokio = { version = "0.2.0", features = ["full"] }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
regex = "1.0"